@@ -1,3 +1,11 @@
+2009-02-27  Michael Natterer  <mitch@imendio.com>
+
+	Bug 573383 – Setting a textview's buffer to NULL doesn't do a
+	complete job
+
+	* gtk/gtktextview.c (gtk_text_view_set_buffer): always set
+	text_view->layout's buffer, also if it's NULL.
+
 2009-02-25  Tristan Van Berkom <tvb@gnome.org>
 
 	Bug 572904 – GtkRadioAction broken in trunk
